Fix track number text-align

--- a/src/components/Playlist/Playlist.css
+++ b/src/components/Playlist/Playlist.css
@@ -35,7 +35,7 @@
   margin-right: 8px;
   max-width: 64px;
   min-width: 32px;
-  text-align: right;
+  text-align: left;
   width: 32px;
 }
 .active {
